Fixes wrapping issue for long club names.

--- a/sites/all/modules/dosomething/features/dosomething_clubs/css/sass/clubs_page.sass
+++ b/sites/all/modules/dosomething/features/dosomething_clubs/css/sass/clubs_page.sass
@@ -115,7 +115,7 @@ div.counter
 		text-align: center
 
 div.school-name
-	width: 500px
+	width: 400px
 	margin-top: -15px
 
 p.club-blurb
